Add DELETE request API
