# app/swagger.json
@@ -168,6 +168,49 @@
                         "description": "Pet not found"
                     }
                 }
+            },
+            "put": {
+                "tags":[
+                    "pets"
+                ],
+                "summary": "Update pet by ID",
+                "description": "Update a single pet",
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                        "name": "petId",
+                        "in": "path",
+                        "description": "ID of pet to delete",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "pet",
+                        "in": "body",
+                        "description": "pet details to be updated",
+                        "required": true
+                    }
+                ],
+                "responses":{
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Pet"
+                            }
+                        }
+                    },
+                    "400":{
+                        "description": "Invalid input"
+                    },
+                    "404": {
+                        "description": "Pet not found"
+                    }
+                }
             }
         }
     },
